The closure looked for a repair's tasks on the brief while they hang on its slices
Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>